bug fixed on mobile version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,15 +180,18 @@ header{
 
 @media screen and (max-width: 480px){
 
-  .header__content-nav > ul{
-    display: none;
+  header{
+    width: 100%;
+    height: 100%;
   }
-
 
   .header__content{
     width: 100%;
   }
 
+  .header__content-nav > ul{
+    display: none;
+  }
 
   .header__content-disc > h1{
     font-size: 30px;
